--- a/src/components/CustomSelect/CustomSelect.css
+++ b/src/components/CustomSelect/CustomSelect.css
@@ -1,48 +1,57 @@
-.wrapper {
-  margin-top: 10px;
+.dropdown {
+	display: inline-block;
+	position: relative;
 }
 
-.dropDown {
-    display: flex;
-	flex-direction: row;
-	justify-content: space-between;
+.dropdown-btn {
+	padding: 11px 15px;
+	display: flex;
 	align-items: center;
-	padding: 0px 16px;
-	gap: 16px;
+	justify-content: space-between;
+	gap: 15px;
 	width: 535px;
-	height: 48px;
-	left: 771.61px;
-	top: 223.27px;
 	background: rgba(0, 0, 0, 0.05);
 	border-radius: 16px;
+	filter: drop-shadow(0px 4px 30px rgba(0, 0, 0, 0.1));
 }
 
-.content {
+.dropdown-content {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	padding: 0px;
+	position: absolute;
+	width: 575px;
+	height: 225px;
+	margin-top: 5px;
+
+	filter: drop-shadow(0px 4px 30px rgba(0, 0, 0, 0.1));
+	border-radius: 10px;
+	overflow: auto;
+}
+
+.dropdown-item {	
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	padding: 11px 15px;
+	padding: 11px 15px 11px 15px;
 	gap: 15px;
 
 	width: 535px;
-	height: 75px;
+	max-height: 75px;
 	background: #FFFFFF;
-}
-
-.item {
-    width: 366px;
-	height: 36px;
-	display: flex;
-	align-items: center;
-    cursor: pointer;
-    position: absolute;
 	flex: none;
-	order: 0;
+	order: 2;
 	flex-grow: 0;
 }
 
-.image {
-	width: 70px;
+.dropdown-item:hover {	
+	background: #B7FAAC;
+}
+
+.dropdown-item .image {
+	width: 40px;
+	height: 40px;
 	background: #FBD960;
 	left: 15px;
 	top: 26.3px;
@@ -52,12 +61,11 @@
 	border-radius: 16px;
 }
 
-.captions {
+.dropdown-item .captions {
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
-	padding: 15px;
-	gap: 5px;
+	gap: 0px;
 	width: 470px;
 	height: 53px;
 	left: 177.4px;
@@ -68,7 +76,7 @@
 	flex-grow: 0;
 }
 
-.title {
+.dropdown-item .captions .title {
 	height: 24px;
 	font-family: 'Lato';
 	font-style: normal;
@@ -78,7 +86,7 @@
 	color: #201F1F;
 }
 
-.subTitle {
+.dropdown-item .captions .subTitle {
 	height: 24px;
 	font-family: 'Lato';
 	font-style: normal;
@@ -93,4 +101,9 @@
 	flex: none;
 	order: 1;
 	flex-grow: 0;
+	
+	width: 470px;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 }
