--- a/src/components/CustomSelect/CustomSelect.css
+++ b/src/components/CustomSelect/CustomSelect.css
@@ -13,6 +13,7 @@
 	background: rgba(0, 0, 0, 0.05);
 	border-radius: 16px;
 	filter: drop-shadow(0px 4px 30px rgba(0, 0, 0, 0.1));
+	user-select: none;
 }
 
 .dropdown-content {
@@ -45,9 +46,19 @@
 	flex-grow: 0;
 }
 
-.dropdown-item:hover {	
+.dropdown-item:hover, 
+.dropdown-item:focus,
+.dropdown-btn:hover,
+.dropdown-btn:focus {	
 	background: #B7FAAC;
 }
+
+.dropdown,
+.dropdown-content,
+.dropdown-item {	
+	transition: all 0.2s;
+}
+
 
 .dropdown-item .image {
 	width: 40px;
