--- a/src/shared/CustomSelect/CustomSelect.css
+++ b/src/shared/CustomSelect/CustomSelect.css
@@ -7,7 +7,6 @@
 	padding: 11px 15px;
 	display: flex;
 	align-items: center;
-	justify-content: space-between;
 	gap: 15px;
 	width: 535px;
 	background: rgba(0, 0, 0, 0.05);
@@ -22,10 +21,9 @@
 	align-items: flex-start;
 	padding: 0px;
 	position: absolute;
-	width: 575px;
+	width: 572px;
 	height: 225px;
 	margin-top: 5px;
-
 	filter: drop-shadow(0px 4px 30px rgba(0, 0, 0, 0.1));
 	border-radius: 10px;
 	overflow: auto;
@@ -37,7 +35,6 @@
 	align-items: center;
 	padding: 11px 15px 11px 15px;
 	gap: 15px;
-
 	width: 535px;
 	max-height: 75px;
 	background: #FFFFFF;
@@ -46,10 +43,19 @@
 	flex-grow: 0;
 }
 
+.dropdown-item .arrow {
+	align-self: end;
+}
+
+.dropdown-btn .title {
+	width: 535px;
+}
+
 .dropdown-item:hover, 
 .dropdown-item:focus,
 .dropdown-btn:hover,
-.dropdown-btn:focus {	
+.dropdown-btn:focus,
+.selected{	
 	background: #B7FAAC;
 }
 
@@ -60,10 +66,10 @@
 	cursor: pointer;
 }
 
-
-.dropdown-item .image {
-	width: 40px;
-	height: 40px;
+.dropdown-item .image, 
+.dropdown-btn .image {
+	width: 22.4px;
+	height: 22.4px;
 	background: #FBD960;
 	left: 15px;
 	top: 26.3px;
